--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     }
   ],
   "require": {
-    "php": "^8.1|^8.2|^8.3",
+    "php": "^7.4",
     "ext-json": "*",
     "ext-mbstring": "*",
     "guzzlehttp/psr7": "^1 || ^2.1",
@@ -43,7 +43,7 @@
   },
   "require-dev": {
     "doctrine/coding-standard": "^12.0",
-    "pestphp/pest": "^2.28",
+    "pestphp/pest": "^1.23",
     "phpstan/phpstan": "^1.10",
     "squizlabs/php_codesniffer": "^3.6"
   },
