--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "ext-json": "*",
     "ext-mbstring": "*",
     "guzzlehttp/psr7": "^1 || ^2.1",
